--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "backend": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "json-server": "^1.0.0-beta.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
